## Process this file with automake to produce Makefile.in

## Copyright (C) 2005-2016 Red Hat, Inc.
## See COPYING.LIB for the License of this software

lsmincdir = $(includedir)/libstoragemgmt

lsminc_HEADERS =			\
   libstoragemgmt.h			\
   libstoragemgmt_accessgroups.h        \
   libstoragemgmt_blockrange.h          \
   libstoragemgmt_capabilities.h        \
   libstoragemgmt_common.h		\
   libstoragemgmt_disk.h                \
   libstoragemgmt_error.h		\
   libstoragemgmt_fs.h                  \
   libstoragemgmt_nfsexport.h           \
   libstoragemgmt_hash.h                \
   libstoragemgmt_plug_interface.h	\
   libstoragemgmt_pool.h		\
   libstoragemgmt_snapshot.h            \
   libstoragemgmt_systems.h             \
   libstoragemgmt_targetport.h          \
   libstoragemgmt_types.h		\
   libstoragemgmt_version.h             \
   libstoragemgmt_local_disk.h		\
   libstoragemgmt_volumes.h		\
   libstoragemgmt_battery.h


install-exec-hook:
	$(mkinstalldirs) $(DESTDIR)$(lsmincdir)
